--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,5 +4,9 @@ html(lang="en")
     title Fash Cards
   body
     include includes/header.pug
+    if name
+      h2 Welcome, #{name}!
+      form(action='/goodbye', method='post')
+        button(type='submit') Goodbye
     block content
     include includes/footer.pug
