--- a/views/hello.pug
+++ b/views/hello.pug
@@ -1,8 +1,8 @@
-extends layout.pug
+extends app
 
-block content
-  form(action='/hello', method='post')
-    label Please enter you name:
-      input(type='text', name='username')
-    button(type='submit') Submit
+block intro
+  form.namecard-form(action='/hello', method='post')
+    label.namecard-prompt Please enter you name:
+      input.namecard-name(type='text', name='username')
+    button.namecard-submit(type='submit') Submit
 
